Fixed default template main overflowing under navbar

--- a/teleop-vue/src/components/DefaultTemplate/DefaultTemplate.scss
+++ b/teleop-vue/src/components/DefaultTemplate/DefaultTemplate.scss
@@ -1,19 +1,16 @@
 .wrapper {
     display: flex;
-    height: 100%;
+    height: 100vh;
     flex-direction: column;
 }
 
 .header {
-    position: absolute;
     z-index: 3;
     width: 100%;
 }
 
 .main {
     display: flex;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    flex: 1;
     overflow: hidden;
 }
